[package]
name = "asym_ratchet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
arrayvec = "0.7.2"
bincode = "1.3.3"
bls12_381 = { path = "bls12_381", features = ["zeroize"] }
ctr = { version = "0.9.2", features = ["alloc"] }
curve25519-dalek = { version = "4.0.0-pre.5", features = ["rand_core"] }
derive_more = "0.99.17"
ff = "0.12.1"
group = "0.12"
nalgebra = "0.32.1"
num-traits = "0.2.15"
rand = "0.8.5"
serde = { version = "1.0.149", optional = true, features = ["derive"] }
sha3 = "0.10.6"
thiserror = "1.0.37"

[features]
default = ["serde"]
serde = ["dep:serde", "arrayvec/serde", "bls12_381/serde", "curve25519-dalek/serde"]

[dev-dependencies]
criterion = "0.4.0"
rand_chacha = "0.3.1"

[[bench]]
name = "asym_ratchet"
harness = false
