[package]
name = "jni-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asym_ratchet = { path = "../..", features = ["serde"] }
bincode = "1.3.3"
bytemuck = "1.13.1"
jni = "0.21.1"
rand = "0.8.5"
serde = "1.0.164"
